# raytracer_c

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
headers/: camera.h  color.h  dielectric.h  hitrecord.h  hittables_list.h  intervals.h  lambertian.h  material.h  metal.h  ray.h  rt_utils.h  sphere.h  vec3.h  vector.h
headers/basic/: color.h  ray.h  vec3.h  vector.h
headers/bvh/: bvh.h
headers/materials/: dielectric.h  lambertian.h  material.h
headers/shapes/: sphere.h
headers/utils/: aabb.h  hittables_list.h  intervals.h  object.h  rt_utils.h
images/: blue.ppm  bvh_image.ppm
src/: camera.c  color.c  dielectric.c  hitrecord.c  hittables_list.c  intervals.c  lambertian.c  material.c  metal.c  ray.c  sphere.c  vec3.c  vector.c
src/basic/: ray.c  vector.c
src/bvh/: bvh.c
src/materials/: dielectric.c  lambertian.c  metal.c
src/shapes/: sphere.c
src/utils/: aabb.c  hittables_list.c  intervals.c  rt_utils.c
